--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -1,1 +1,35 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zsifxm298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zsifxm298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank">黄之锋入选金融时报全球50大重要人物</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wong1-150x120.jpg" align ="left"></a>英国《金融时报》日前公布了2010年以来过去10年影响全球的50位重要人物名单，其中香港众志秘书长黄之锋以“香港政治活动人士”的身份入选，成为唯一上榜的香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank">山东警察跨省抓捕 丁家喜等人下落不明</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3-21-150x120.jpg" align ="left"></a>12月26日晚，新公民运动组织者之一，北京维权律师丁家喜，福建维权人士戴振亚分别被山东警方带走。目前，没有进一步消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank">程晓容：法制人权黑暗年 2019的中国故事</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-77223993-150x120.jpg" align ="left"></a>要想了解中国，不应听信中共兜售的故事，因为那些章节里的鲜花和光环，碾碎了几代中国人的权利和幸福、还企图淹没苦难中的呐喊和抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank">控告江泽民  山东壁挂厂长田世洪遭迫害离世</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1907181540511973-450x300-150x120.jpg" align ="left"></a>山东威海市文登壁挂厂厂长田世洪坚持修炼法轮功，多次遭骚扰、绑架、非法关押，曾经被非法劳教，身心上长期遭受高压迫害，于11月底含冤离世，终年64岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748578.md#1" target="_blank">贵州访民三孩无法入学 当局逼毁上访证据</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/27/n11748578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13967386-150x120.jpg" align ="left"></a>贵州大方县黄泥塘镇一村民，多年前因镇政府整脏治乱工作中遭到政法委书记暴打致残，三个孩子至今无法入学。当地警方逼他签同意书毁灭信访证据后才能让孩子上学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank">滥用“精神病” 大陆排查病患被指侵犯人权</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-4-17-minghui-persecution-191359-0-150x120.jpg" align ="left"></a>在中国大陆，“被精神病”成为中共惯用的维稳手段。专家指出，精神病的排查被滥用，往往成为政治迫害的工具，而由于精神卫生医疗条件和专业化的限制，很多真正的精神病人却很难被救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank">九位老人一起读法轮功著作 被构陷到检察院</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2004-11-2-zfl-2-150x120.jpg" align ="left"></a>陕西省岐山县公安局调动30多名警察，于7月10日绑架了在一起学习法轮功著作的九位老人，非法抄家，抢劫私人财物。其中徐明侠、焦炳兰、亚兰、沈红奇一直被非法关押、构陷，邵启虎等五位老人被取保候审后放回家，目前也被构陷到检察院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank">临沂监狱欲盖弥彰？王全璋健康堪忧</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-19-150x120.jpg" align ="left"></a>卷入709事件而被判刑入狱的维权律师王全璋，健康状况一直备受外界关注。周四（26日）他向探监的妻子李文足重申，自己一切正常，但种种迹象却显示情况刚好相反，而山东临沂监狱却刻意掩饰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank">圣诞佳节：别忘记失去自由的维权人士</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-3-150x120.jpg" align ="left"></a>在圣诞佳节，关注中国劳工权益的英文网上期刊《中国制造》（Made in China Journal）发表文章，提醒读者不要忘记一班现在仍然失去自由的中国维权人士。文章列举其中几位维权人士，呼吁社会要继续关注他们的处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank">法轮功学员沈子力生前遭受的经济迫害</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-19-150x120.jpg" align ="left"></a>齐齐哈尔法轮功学员沈子力于2007年2月27日被迫害致死，距今近13年。在中共疯狂的迫害中，沈子力遭受了残酷的肉体和精神折磨，以及经济上的严重迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11745201.md#1" target="_blank">冤狱酷刑 株连迫害 法轮功学员付金凤的遭遇</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11745201.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-20-150x120.jpg" align ="left"></a>江西省南昌市中心血站护师付金凤因坚持修炼法轮功，多次被非法关押、劳教、判刑，家庭被拆散，母亲在悲愤中离世，给她身心造成极大的伤害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank">【新闻看点】圣诞祝福 全球网友寄语香港</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240928582478-150x120.jpg" align ="left"></a>12月7日，我们发起了《2020：寄语香港》活动。目的是给大家提供一个平台，用诗文乐画的方式，向香港人送上一份新年祝福。活动开始后，我们陆续收到了很多朋友们的Email，都希望通过新闻看点，向香港人传递一份祝福。因为实在太多了，所以决定分为上下两个部分播出。今天播出上半部分，然后元旦当天再播出下半部分。即使这样，一些朋友太长的文字祝福，也只能撷取其中精华部分.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank">【预告】新唐人圣诞节期间播出电影《归途》</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d2b09f7df0e78900d26a02647216a96-150x120.jpg" align ="left"></a>2019圣诞节期间，新唐人将独家播出根据真人真事改编的电影《归途 》（Origin Bound）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743842.md#1" target="_blank">【十字路口】五项主因 港台掀青年抗争潮</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743842.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e3a04f354fb41f_ttl7daysPl_20191225-____-DJY-150x120.jpg" align ="left"></a>平安夜再抗争 香港台湾为何掀“青年抗争潮”？港警不作为，抗争者要当心黑手段？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742729.md#1" target="_blank">曾遭40种酷刑 医生伍群再被劫入永川监狱</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-9-26-featurephotos-64_fLC3ND3-1-150x120.jpg" align ="left"></a>重庆法轮功学员伍群因坚持信仰被非法劳教、判刑，曾遭受40多种酷刑折磨，于2018年11月28日再度被绑架并非法判刑3年半，至今仍被被关押在永川监狱，家属不得见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744817.md#1" target="_blank">人权组织吁加拿大撤销中共官媒播放执照</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744817.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ddb0c74ccf3ed7712a8a3d60372e5d4c-150x120.png" align ="left"></a>国际人权组织“保护卫士”日前向加拿大投诉，要求撤销中共2家官媒在加拿大的播放执照，因为它们协助制作并播送囚犯被逼“电视认罪”的视频，违反了加拿大的广播标准。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743195.md#1" target="_blank">余文生案秘审逾8个月 许艳平安夜千里救夫</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11743195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG-20191224-WA0004-150x120.jpg" align ="left"></a>“这已是第十次去徐州看望余文生律师。”12月23日，许艳与王宇、蔺其磊律师及两名公民，驾车穿越1600多里路，到达江苏省徐州市，向省高院提出控诉，要求立即无条件释放余文生律师。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank">假疫苗受害儿豆豆走了 陕西当局屏蔽讯息</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__5898248-600x400-150x120.jpg" align ="left"></a>陕西凤县5岁女孩雷鑫睿(小名豆豆)，11个月大时打了一剂武汉生物出产的A群流脑疫苗后，导致四肢瘫痪、意识丧失、眼睛失明。在病痛中痛苦折磨了四年，于上周二永远离开了这个世界。到最后一刻仍然得不到一个公道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225666-150x120.jpg" align ="left"></a>正如大家在新闻上看到的，本来是平安夜，和开心的圣诞节日，但香港街头并不平安。这场抗争运动已经快满7个月了，从当晚的情况来看，势必要延续到新年。那么今天的节目，我们还是以专题形式推出，来回顾这一夜在香港，都发生了什么。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank">人权问责法效应 中共迫害者被举报到海外</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-18-150x120.jpg" align ="left"></a>自《通告》发布后，明慧网收到大量的对参与迫害法轮功的中共高官、政法委和“610”人员、法官、检察官、派出所所长等等的举报信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741511.md#1" target="_blank">逆势而行 亲共份子再次干扰神韵演出</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912242112322003-150x120.jpg" align ="left"></a>在美国清理中共代理人，保护宗教信仰自由、追查迫害信仰者责任之时，李华红等纽约亲共分子再次露面干扰神韵演出。
+
+12月20至22日，神韵国际艺术团在纽约州帕切斯市的帕切斯学院表演艺术中心（The Performing Arts Center at Purchase College）拉开2020新演季帷幕。神韵今年的全新节目同样给新老观众带来惊喜，他们对每一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank">中共否认强制外籍囚犯劳动 狡辩难掩罪行</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11741818.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>中共一句“负责任地告诉你”，非但不会消除外界的疑虑，反而证实了指控的真实性。因为中共玩弄法律、谎话连篇、突破道德良知底线，完全不负责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:57 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-2-150x120.jpg" align ="left"></a>美国国务院12月20日发布新闻通告表示，美国对包括中共和中共官员在内的侵犯宗教自由者采取持续追责行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank">圣诞卡求救信 曾被迫害英记者透露更多细节</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741441.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-71081666-150x120.jpg" align ="left"></a>上周末，一张圣诞卡求救信揭发中国上海青浦监狱强制囚犯工作的内幕，引起全球关注。周一，曾在大陆经历类似遭遇的当事人透露更多细节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank">澳门实施“安全法” 恐落入中共监控系统</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11741039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188813067-1-150x120.jpg" align ="left"></a>澳门主权移交20年，《网络安全法》开始实施。外界关注，鉴于国内省份早已成立“网络斗争指挥中心”，澳门不断向中国大陆看齐、一致，完全内地化，一国两制已不复存在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747235.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br></h3>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留的及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/25/n11744898.md#1" target="_blank">河南一公示名单泄露3260人身份证号码</a><br></h3>去年，中共河南省信阳市商城县民政局在公示名单时，将3千多位民众完整的身份证号码泄露出去。当被质问是否泄露公民隐私时，当局工作人员称这个不算是泄露隐私。此事引起网民热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/23/n11740664.md#1" target="_blank">法轮功学员孙凤华遭绑架命危 数月后离世</a><br></h3>哈尔滨市法轮功学员孙凤华于9月11日被哈尔滨市铁路公安局直属派出所警察绑架，当时血压高达240，出现生命危险。第二天警察通知家属把她接走。回家3个月后，她于12月9日离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
+</table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/ncid278_4.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/ncid278_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_4.htm">http://www.epochtimes.com/gb/ncid278_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
